...
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:layout_gravity="center_horizontal"
    tools:context=".view.dataset_editing.TakePictureFragment">

    <androidx.camera.view.PreviewView
        android:id="@+id/previewView_camera"
        class="androidx.camera.view.PreviewView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/camera_guideline1"
        android:clickable="false" />

    <ImageView
        android:id="@+id/imageView_camera"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/camera_guideline1"
        android:contentDescription="@string/AddPicture_camareImageViewDescription"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button_take_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AddPicture_takePictureButtonText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/camera_guideline1"
        app:layout_constraintBottom_toTopOf="@id/button_select_category_take_picture_fragment"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_select_category_take_picture_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_take_picture"
        tools:ignore="ButtonStyle" />

    <Button
        android:id="@+id/button_save_take_picture_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@color/purple_500"
        android:enabled="false"
        android:text="@string/AddPicture_saveButtonText"
...
