...
    <string name="app_name">Human Learning</string>
    <string name="AddPicture_takePictureButtonText">Take a picture</string>
    <string name="AddPicture_takePictureButtonTextWhenImageTaken">Change picture</string>
    <string name="AddPicture_selectCategoryButtonText">Select the category</string>
    <string name="AddPicture_saveButtonText">Save selection</string>
    <string name="AddPicture_permissionGrantedToast">Camera permission granted.</string>
    <string name="AddPicture_categorySelectionDialogTitle">Pick a category</string>
    <string name="AddPicture_permissionNeededDialogTitle">Camera required</string>
    <string name="AddPicture_permissionNeededDialogMessage">To use this functionality, access to the camera is required. Either you have denied the app the permission to use it or your device has no camera.</string>
    <string name="DataCreationActivity_DataCreationTitle">Categories List :</string>
    <string name="DataCreationActivity_DataCreationSubmitButton">Save changes</string>
    <string name="DataCreationActivity_DataCreationAddButton">Add new category</string>
    <string name="DataCreationActivity_DataCreationCat">Enter category name</string>
    <string name="AddPicture_errorWhileTakingPictureDialogTitle">Error</string>
    <string name="AddPicture_errorWhileTakingPictureDialogMessage">An error occurred while taking the picture, please try again.</string>
    <string name="AddPicture_camareImageViewDescription">Shows the picture which has just been taken</string>
    <string name="learning_im_to_sort_descr">Image to sort</string>
    <string name="learning_cat_0_descr">First target category</string>
    <string name="learning_cat_1_descr">Second target category</string>
    <string name="learning_cat_2_descr">Third target category</string>
...
