<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/delete_pictures"
        android:title="@string/SelectPicture_deleteSelectedPicturesButton"
        android:icon="@android:drawable/ic_menu_delete"
        />

    <item
        android:id="@+id/set_representative_picture"
        android:title="@string/DisplayImageSet_setAsRepresentativePictureButton"
        android:icon="@android:drawable/btn_star_big_off"
        />

</menu>