...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.dataset_editing.DisplayImageSetFragment">

    <TextView
        android:id="@+id/textView_display_image_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/display_ds_guideline1" />


    <GridView
        android:id="@+id/gridView_display_image_set"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:numColumns="2"
        android:layout_marginTop="10dp"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
...
