<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/display_imageset_menu_info"
        android:title="@string/MetadataEditing_modifyCategoriesButton"
        android:icon="@android:drawable/ic_dialog_info"
        app:showAsAction="always" />
</menu>